documentation implementation Signed-off-by: dbulahov <bulahovdenis@gmail.com>